# 3dfluid

./: CMakeLists.txt  LICENSE  README.md
Cuda/: CMakeLists.txt  EventManager.cpp  Makefile  fluid_solver.cu
OpenMP/: CMakeLists.txt  EventManager.h  Makefile  fluid_solver.cpp  fluid_solver.h  main.cpp
cuda/: CMakeLists.txt  Makefile  fluid_solver.cu  main.cu
openmp/: CMakeLists.txt  Makefile  fluid_solver.cpp
